--- a/other/cmake/QArchiveConfig.cmake.in
+++ b/other/cmake/QArchiveConfig.cmake.in
@@ -2,7 +2,23 @@
 
 include(CMakeFindDependencyMacro)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
-find_dependency(Qt${QT_VERSION_MAJOR}Core)
-find_dependency(LibArchive)
+find_dependency(Qt${QT_VERSION_MAJOR} COMPONENTS Core)
+
+if (APPLE)
+   set(PKG_CONFIG_EXECUTABLE pkg-config --define-prefix @LIBARCHIVE_PKG_CONFIG@)
+   find_package(PkgConfig QUIET)
+   if(PKG_CONFIG_FOUND)
+      pkg_check_modules(LIBARCHIVE QUIET libarchive IMPORTED_TARGET)
+      if(NOT LIBARCHIVE_FOUND)
+	 set(LibArchive_INCLUDE_DIR @LibArchive_INCLUDE_DIR@) 
+	 find_dependency(LibArchive)
+      endif()
+   else()
+      set(LibArchive_INCLUDE_DIR @LibArchive_INCLUDE_DIR@)
+      find_dependency(LibArchive)
+   endif()
+else()
+   find_dependency(LibArchive)
+endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/QArchiveTargets.cmake")
