--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,10 @@ if(APPLE AND LIBARCHIVE_PKG_CONFIG)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(LIBARCHIVE REQUIRED libarchive IMPORTED_TARGET)
    if(NOT LIBARCHIVE_FOUND)
-      find_package(LibArchive)
+      find_package(LibArchive REQUIRED)
    endif()
 else ()
-   find_package(LibArchive)
+   find_package(LibArchive REQUIRED)
 endif()
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)
