--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ target_wrapper.*
 # QtCreator CMake
 CMakeLists.txt.user*
 
-# QtCreator 4.8< compilation database 
+# QtCreator 4.8< compilation database
 compile_commands.json
 
 # QtCreator local machine specific files for imported projects
@@ -54,3 +54,8 @@ examples/conan/build
 
 # build dir
 build
+
+#VSCode and CLion dirs
+.idea
+.vscode
+*~
