--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,7 +69,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        macos_version: [10.15,12]
+        macos_version: [11, 12]
         qt_version: [5.15.2, 6.4.0]
         shared: [ON, OFF]
 
@@ -89,14 +89,9 @@ jobs:
         run: brew install libarchive
 
       - name: Configure CMake
-        if: ${{ matrix.macos_version }} == '10'
         run: cmake -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}" -DLIBARCHIVE_PKG_CONFIG=$(brew --prefix libarchive)/lib/pkgconfig/libarchive.pc -DBUILD_SHARED_LIBS=${{ matrix.shared }} -DBUILD_TESTS=ON -B "${{github.workspace}}/build"
    
 
-      - name: Configure CMake
-        if: ${{ matrix.macos_version }} == '12'
-        run: cmake -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}" -DLibArchive_INCLUDE_DIR=$(brew --prefix libarchive)/include -DBUILD_SHARED_LIBS=${{ matrix.shared }} -DBUILD_TESTS=ON -B "${{github.workspace}}/build"
-        
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
