--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         ubuntu_version: [20.04, 22.04]
-        qt_version: [5.12.12, 5.15.2, 6.4.0]
+        qt_version: [5.9.9, 5.12.12, 5.15.2, 6.4.0]
         shared: [ON, OFF]
 
     steps:
