--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,3 +88,73 @@ jobs:
 
       - name: Run tests
         run: meson test -C "${{github.workspace}}/build" --verbose
+  MSYS2:
+    runs-on: windows-latest
+    name: MSYS2-${{matrix.platform}}
+    strategy:
+      matrix:
+        deps: ['enabled', 'disabled']
+        platform: ['MINGW64', 'UCRT64', 'CLANG64']
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: msys2/setup-msys2@v2
+        with:
+          msystem: ${{matrix.platform}}
+          pacboy: >-
+            cc:p
+            libarchive:p
+            meson:p
+            ninja:p
+            pkgconf:p
+            qt5-base:p
+            qt6-base:p
+
+      - name: Compile and Test
+        run: |
+          meson setup "${{github.workspace}}/build" -Dauto_features=${{matrix.deps}} -Dwarning_level=3 -Dcpp_std=c++20
+          meson compile -C "${{github.workspace}}/build" --verbose
+          meson test -C "${{github.workspace}}/build" --verbose
+  Ubuntu-meson:
+    runs-on: ubuntu-20.04
+    name: Linux-GCC${{matrix.cxx}}
+    strategy:
+      matrix:
+        cxx: ['7', '13']
+    steps:
+      - uses: actions/checkout@v4
+      - uses: egor-tensin/setup-gcc@v1
+        with:
+          version: ${{matrix.cxx}}
+      - name: Install meson
+        run: |
+          python3 -m pip install meson ninja
+          sudo apt install -y libarchive-dev qtbase5-dev
+      - name: Compile and Test
+        run: |
+          meson setup "${{github.workspace}}/build" -Dwarning_level=3
+          meson compile -C "${{github.workspace}}/build" --verbose
+          meson test -C "${{github.workspace}}/build" --verbose
+  Ubuntu-meson-clang:
+    runs-on: ubuntu-20.04
+    name: Linux-Clang${{matrix.cxx}}
+    strategy:
+      matrix:
+        cxx: ['7', '17']
+    steps:
+      - uses: actions/checkout@v4
+      - uses: egor-tensin/setup-clang@v1
+        with:
+          version: ${{matrix.cxx}}
+      - name: Install meson
+        run: |
+          python3 -m pip install meson ninja
+          sudo apt install -y libarchive-dev qtbase5-dev
+      - name: Compile and Test
+        run: |
+          meson setup "${{github.workspace}}/build" -Dwarning_level=3
+          meson compile -C "${{github.workspace}}/build" --verbose
+          meson test -C "${{github.workspace}}/build" --verbose
