[Bugfix] Handle archive entry with UTF-8 properly
Handle UTF-8 archive entry properly by parsing them with
QString then updating the archive entry with
'archive_entry_set_pathname_w' with wide characters.

This fixes messed up extracted filenames in Windows mostly,
since Unix based OS seems to be unaffected but we apply this
fix regardless of the OS just to be safe.

Fixes #49

Signed-off-by: Divya Antony J.R <antonyjr@protonmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
 name: Tests
 
 on:
+  push:
+    branches:
+      - "*"
   pull_request:
     branches:
       - master
@@ -66,7 +69,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        macos_version: [11, 12]
+        macos_version: [12]
         qt6: ['enabled', 'disabled']
         shared: ['shared', 'static']
 
