--- a/other/cmake/config.h.in
+++ b/other/cmake/config.h.in
@@ -1,5 +1,22 @@
 #ifndef CONFIG_H_QARCHIVE_INCLUDED
 #define CONFIG_H_QARCHIVE_INCLUDED
 #cmakedefine QARCHIVE_STATIC
+
+#ifndef QARCHIVE_VERSION_STR
+# define QARCHIVE_VERSION_STR "@PROJECT_VERSION@"
+#endif
+
+#ifndef QARCHIVE_VERSION_MAJOR
+# define QARCHIVE_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#endif
+
+#ifndef QARCHIVE_VERSION_MINOR
+# define QARCHIVE_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#endif
+
+#ifndef QARCHIVE_VERSION_PATCH
+# define QARCHIVE_VERSION_PATCH @PROJECT_VERSION_PATCH@
+#endif
+
 #endif
 
