[Release v2.2.9] QArchive v2.2.9 release
This is a minor release, no need to update to this version.

# Changelog

   * Added QARCHIVE_VERSION_STR symbolic constant to report
     QArchive version to the users.

   * Fix tests

# CI/CD Changes

   * Added prebuilds for Windows Users, MSVC x64 builds will
     be uploaded to the new releases automatically.

   * Also upload prebuilt library of each commit to continuous
     tag for users to test and consume.

Signed-off-by: Divya Antony J R <antonyjr@protonmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,9 @@ jobs:
       - id: git
         name: Check Commit Message
         run: |
-          git clone https://github.com/antony-jr/QArchive qarc
-          cd qarc
-          git tag > /tmp/tags.txt
-          cd ..
-          rm -rf qarc
-          cat /tmp/tags.txt
+          # Don't need tags to check if the commit message has
+          # the special commit.
+          echo "" > /tmp/tags.txt
           result=$(python3 scripts/check.py "$(git log -1 --pretty=%B)" "/tmp/tags.txt")
           echo "deploy=$result" >> $GITHUB_OUTPUT
 
