--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,8 +125,6 @@ jobs:
       working-directory: ${{ github.workspace }}/upload
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ needs.check.outputs.deploy }}
+        TAG: ${{ needs.check.outputs.deploy }}
       run: |
-        gh release upload "$tag" \
-              --repo="$GITHUB_REPOSITORY" \
-              windows-msvc-v${{ matrix.toolset }}-qt-${{ matrix.qt_version }}-${{ matrix.arch }}-${{ matrix.build_type }}.zip
+        gh release upload %TAG% --repo %GITHUB_REPOSITORY% windows-msvc-v${{ matrix.toolset }}-qt-${{ matrix.qt_version }}-${{ matrix.arch }}-${{ matrix.build_type }}.zip
