--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,11 @@ jobs:
         toolset: [14.0, 14.2]
 
     steps:
+    - name: Test
+      env:
+        check: "Testing"
+      run: echo "${{ env.check }}"
+
     - name: Checkout
       uses: actions/checkout@v3
 
@@ -127,4 +132,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TAG: ${{ needs.check.outputs.deploy }}
       run: |
-        gh release upload %TAG% --repo %GITHUB_REPOSITORY% windows-msvc-v${{ matrix.toolset }}-qt-${{ matrix.qt_version }}-${{ matrix.arch }}-${{ matrix.build_type }}.zip
+        gh release upload "${{ env.TAG }}" --repo "${{ env.GITHUB_REPOSITORY }}" windows-msvc-v${{ matrix.toolset }}-qt-${{ matrix.qt_version }}-${{ matrix.arch }}-${{ matrix.build_type }}.zip
